# vibe

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  child.md
.claude-flow/: CAPABILITIES.md  agents.json  config.yaml
.claude-flow/agents/: store.json
.claude-flow/hive-mind/: state.json
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/swarm/: swarm-state.json
.claude/hooks/: README.md  pre-task-markdown-converter.py
.codex/: config.toml
.opencode/agent/: structured-prompt-translator.md
.swarm/: memory.db  memory.db-shm  memory.db-wal  schema.sql
StarWatch/: com.user.startwatch.plist  config.json  install.sh
StarWatch/.build/: build.db  debug.yaml  plugin-tools.yaml  release.yaml
StarWatch/.claude/: memory.db
StarWatch/.claude-flow/: CAPABILITIES.md  config.yaml
StarWatch/.memory-bank/: activeContext.md  (+5 more)
StartWatch/: .gitignore  AGENTS.md  Backlog  CLAUDE.md  Package.swift  README.md  backlog.md  com.user.startwatch.plist  config.example.json  config.json  install.sh
claude_mobile/: CLAUDE.md
claude_mobile/finance-dashboard/docs/user_files/tbank-mobile-api/: LICENSE  README.md  pyproject.toml
claude_mobile/finance-dashboard/docs/user_files/tbank-mobile-api/examples/: README.md  custom_prompts.py  fetch_all.py  login_interactive.py
claude_mobile/finance-dashboard/docs/user_files/tbank-mobile-api/tbank/: __init__.py  client.py  errors.py  http.py  identity.py  storage.py
claude_mobile/finance-dashboard/docs/user_files/tbank-mobile-api/tbank/api/: __init__.py  accounts.py  operations.py
claude_mobile/finance-dashboard/docs/user_files/tbank-mobile-api/tbank/auth/: __init__.py  constants.py  fingerprint.py  flow.py  pkce.py  steps.py
claude_mobile/finance-dashboard/docs/user_files/tbank-mobile-api/tbank/models/: __init__.py  accounts.py  auth.py  common.py  operations.py
claude_mobile/finance-dashboard/docs/user_files/tbank-mobile-api/tests/: test_auth_flow.py  test_fingerprint.py  test_models.py  test_pkce.py  test_storage.py  test_tokens.py
eliza-proxy/: .env  .env.example  CLAUDE.md  package-lock.json  package.json  server.js  usage.jsonl
genidea/: CLAUDE.md  Design System.html  index.html  log-server.js  package-lock.json  package.json  prompt-engineer-roles.md
groovy_agent/: .env  .env.example  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  backlog.md  models.json  package-lock.json  package.json  server.js
moto_docs/: concept.md  index.html
tests/: README.md  index.html
(+3037 files in other folders)
