[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "tbank-mobile-api"
version = "0.1.0"
description = "Unofficial Python client for T-Bank (Tinkoff) mobile API, reverse-engineered from the Android app."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Nikita Samoylov" }]
keywords = ["tbank", "tinkoff", "banking", "api", "unofficial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.11",
    "ruff>=0.6",
]

[project.urls]
# Filled in when the project has a public home.

[tool.hatch.build.targets.wheel]
packages = ["tbank"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # bugbear
    "SIM",      # simplify
    "RET",      # flake8-return
    "PTH",      # use pathlib
    "RUF",      # ruff-specific
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "N812",     # `from tbank.auth import constants as C` is intentional shorthand
    "RUF001",   # ambiguous Cyrillic chars in strings — Russian text is real
    "RUF003",   # ambiguous Cyrillic chars in comments — same reason
    "RUF022",   # __all__ groups by category, not alphabetical
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "SLF001"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
